--- a/panel_estadisticas.html
+++ b/panel_estadisticas.html
@@ -238,9 +238,9 @@
     // --- IMPORTACIONES Y CONFIGURACIÓN DE SUPABASE ---
     
     // ** ATENCIÓN: DEBES REEMPLAZAR ESTOS VALORES CON LOS TUYOS DE SUPABASE **
-    const SUPABASE_URL = 'TU_URL_SUPABASE'; // Ej: 'https://xyz.supabase.co'
-    const SUPABASE_ANON_KEY = 'TU_ANON_KEY_SUPABASE'; // Clave pública 'anon'
-    
+    const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY";
+
     // Inicializar Supabase Client
     const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
