--- a/panel_estadisticas.html
+++ b/panel_estadisticas.html
@@ -234,6 +234,8 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
 <script type="module">
     // --- IMPORTACIONES Y CONFIGURACIÓN DE SUPABASE ---
     
