--- a/panel_estadisticas.html
+++ b/panel_estadisticas.html
@@ -81,7 +81,7 @@
             padding: 20px; 
             border-radius: 12px; 
             box-shadow: var(--shadow-subtle); 
-            height: 400px; 
+            height: 480px; /* MODIFICADO: Aumentado de 400px a 480px para más espacio en los gráficos */
             display: flex;
             flex-direction: column;
             transition: transform 0.3s ease; 
@@ -179,7 +179,7 @@
         @media (max-width: 768px) {
             h2 { font-size: 2em; margin-top: 15px; }
             .dashboard-grid { padding: 10px; gap: 15px; }
-            .chart-container { height: 350px; }
+            .chart-container { height: 400px; } /* MODIFICADO: Aumentado de 350px a 400px para móviles */
             .dashboard-header { justify-content: center; padding-bottom: 15px; } 
         }
 
