--- a/panel_estadisticas.html
+++ b/panel_estadisticas.html
@@ -263,6 +263,8 @@ display: none;
 </div>
 </div>
 </div>
+</body>
+</html>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
