--- a/index.html
+++ b/index.html
@@ -236,7 +236,11 @@
 <div class="box hidden" id="loginBox">
     <h2>🔑 Iniciar Sesión</h2>
     <input type="email" placeholder="📧 Correo" id="loginEmail">
-    <input type="password" placeholder="🔒 Contraseña" id="loginPass">
+<label for="loginPass" style="font-size: 0.9em; font-weight: 600; display: block; margin-bottom: 5px;">Contraseña:</label>
+<div class="password-container">
+    <input type="password" placeholder="🔒 Contraseña" id="loginPass">
+    <span class="toggle-password" onclick="toggleVisibility('loginPass', this)">👁️</span>
+</div>
     <button class="btn-primary" onclick="login()">Ingresar</button>
     
     <p id="loginMsg"></p>
