--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
 
     <input type="tel" id="regTelefono" placeholder="📱 Teléfono (Ej: +56911111111)">
     <input type="email" id="regEmail" placeholder="📧 Correo Electrónico">
-    <label for="regPass" style="font-size: 0.9em; font-weight: 600; display: block; margin-bottom: 5px;">Contraseña:</label>
+    <label for="regPass" style="font-size: 0.9em; font-weight: 600; display: block; margin-bottom: 5px;">Crea tu Contraseña:</label>
 <div class="password-container">
     <input type="password" id="regPass" placeholder="🔒 Escribe tu Contraseña" onkeyup="checkPasswordMatch()">
     <span class="toggle-password" onclick="toggleVisibility('regPass', this)">👁️</span>
 </div>
 
-<label for="regConfirmPass" style="font-size: 0.9em; font-weight: 600; display: block; margin-bottom: 5px;">Confirmar Contraseña:</label>
+<label for="regConfirmPass" style="font-size: 0.9em; font-weight: 600; display: block; margin-bottom: 5px;">Confirma tu Contraseña:</label>
 <div class="password-container">
     <input type="password" id="regConfirmPass" placeholder="✅ Confirma tu Contraseña" onkeyup="checkPasswordMatch()">
     <span class="toggle-password" onclick="toggleVisibility('regConfirmPass', this)">👁️</span>
