--- a/historial_admin.html
+++ b/historial_admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Historial Total de Solicitudes - Administrador</title>
+<title>Panel Historico de Solicitudes </title>
 
 <style>
     /* Variables de Color (Consistencia Institucional) */
@@ -250,9 +250,9 @@
 
 <div class="container">
 
-    <a href="menu-admin.html" class="btn-volver">⬅ Volver al Menú Admin</a>
+    <a href="menu.html" class="btn-volver">⬅ Volver al Menú Admin</a>
 
-    <h2>HISTORIAL TOTAL de Solicitudes Entregadas 📊</h2>
+    <h2>Panel Historico de Solicitudes 📊</h2>
 
     <div class="filter-box">
         <input type="text" id="filtro-rut" placeholder="Buscar por RUT del Solicitante">
