--- a/menu.html
+++ b/menu.html
@@ -151,7 +151,7 @@
     <button onclick="location.href='historial.html'">📜 Historial de Entregas</button>
     <button id="admin_panel_Button" style="display:none;" onclick="location.href='panel_admin.html'">🛠️ Panel Admin</button>
     <button id="admin_estadisticas_Button" style="display:none;" onclick="location.href='panel_estadisticas.html'">📈 Panel de estadisticas</button>
-    <button id="admin_estadisticas_Button" style="display:none;" onclick="location.href='historial_admin.html'">📈 Panel Historico Solicitudes</button>
+    <button id="admin_historial_Button" style="display:none;" onclick="location.href='historial_admin.html'">📈 Panel Historico Solicitudes</button>
     <button class="logout" onclick="logout()">Cerrar Sesión</button>
 </div>
 
