--- a/historial_admin.html
+++ b/historial_admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Panel Historico de Solicitudes </title>
+<title>Historico de Solicitudes </title>
 
 <style>
     /* Variables de Color (Consistencia Institucional) */
