--- a/panel_admin.html
+++ b/panel_admin.html
@@ -282,7 +282,7 @@
 
     <header>
         <div class="header-title">
-            <h1>Panel de Administrador</h1>
+            <h1>Gestor de solicitudes</h1>
         </div>
         <div class="header-info">
             <h2>INACAP</h2>
