--- a/panel_estadisticas.html
+++ b/panel_estadisticas.html
@@ -196,6 +196,15 @@ display: none;
 </style>
 </head>
 <body>
+    <header>
+        <div class="header-title">
+            <h1>Gestor de solicitudes</h1>
+        </div>
+        <div class="header-info">
+            <h2>INACAP</h2>
+            <p>Área Energía y Área Automatización Electrónica y Robótica</p>
+        </div>
+    </header>
 <h2>📈 Panel de Reportes de Uso del Pañol</h2>
 <div class="dashboard-header">
 <a href="menu.html" class="menu-button">
