--- a/historial_admin.html
+++ b/historial_admin.html
@@ -250,7 +250,7 @@
 
 <div class="container">
 
-    <a href="menu.html" class="btn-volver">⬅ Volver al Menú Admin</a>
+    <a href="menu.html" class="btn-volver">⬅ Volver al Menú </a>
 
     <h2>Panel Historico de Solicitudes 📊</h2>
 
